Closed Bug 492661 Opened 15 years ago Closed 15 years ago

Inconsistent layout with <col style="visibility:collapse">

Categories

(Core :: Layout: Tables, defect)

x86
macOS
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: bernd_mozilla)

References

Details

(Keywords: testcase)

Attachments

(4 files)

Attached file testcase (dynamic)
Seems like visibility:collapse on <col> isn't taken into account in this dynamic case.
Attached file reference (static)
Attached patch patchSplinter Review
this makes the check on colgroups and cols independent from the presence of a cell
Assignee: nobody → bernd_mozilla
Status: NEW → ASSIGNED
Attachment #377355 - Flags: superreview?(roc)
Attachment #377355 - Flags: review?(roc)
Comment on attachment 377355 [details] [diff] [review]
patch

+== 492661-1.html 492661-1-ref.html

The tests aren't here.

Thanks!!
Attachment #377355 - Flags: superreview?(roc)
Attachment #377355 - Flags: superreview+
Attachment #377355 - Flags: review?(roc)
Attachment #377355 - Flags: review+
http://hg.mozilla.org/mozilla-central/rev/ded83c29f901
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: