bug 492661 - track the visibility of cols and colgroups independently of the presence of cells r/sr=roc