layout/tables/nsTableFrame.cpp
@@ -2170,8 +2170,11 @@ nsTableFrame::AdjustForCollapsingRowsCols(nsHTMLReflowMetrics& aDesiredSize,
 {
   nscoord yTotalOffset = 0; // total offset among all rows in all row groups
 
-  // reset the bit, it will be set again if row/rowgroup is collapsed
+  // reset the bit, it will be set again if row/rowgroup or col/colgroup are
+  // collapsed
   SetNeedToCollapse(PR_FALSE);
+  
+  CheckCollapsedColumns();
   
   // collapse the rows and/or row groups as necessary
   // Get the ordered children
@@ -2196,6 +2199,36 @@ nsTableFrame::AdjustForCollapsingRowsCols(nsHTMLReflowMetrics& aDesiredSize,
                          nsSize(aDesiredSize.width, aDesiredSize.height));
 }
 
+void
+nsTableFrame::CheckCollapsedColumns()
+{
+  nsTableFrame* tableFrame = static_cast<nsTableFrame*>(GetFirstInFlow());
+  if (!tableFrame)
+    return;
+  // loop over colgroups
+  for (nsIFrame* groupFrame = mColGroups.FirstChild(); groupFrame;
+         groupFrame = groupFrame->GetNextSibling()) {
+    const nsStyleVisibility* groupVis = groupFrame->GetStyleVisibility();
+    PRBool collapseGroup = (NS_STYLE_VISIBILITY_COLLAPSE == groupVis->mVisible);
+    if (collapseGroup) {
+      tableFrame->SetNeedToCollapse(PR_TRUE);
+      return;
+    }
+  }
+  
+  //loop over columns
+  PRInt32 numCols = mColFrames.Length();
+  for (int colX = 0; colX < numCols; colX++) {
+    nsTableColFrame* colFrame = tableFrame->GetColFrame(colX);
+    const nsStyleVisibility* colVis = colFrame->GetStyleVisibility();
+    PRBool collapseCol = (NS_STYLE_VISIBILITY_COLLAPSE ==
+                                colVis->mVisible);
+    if (collapseCol) {
+      tableFrame->SetNeedToCollapse(PR_TRUE);
+      return;
+    }
+  }
+}
 nscoord
 nsTableFrame::GetCollapsedWidth(nsMargin aBorderPadding)
 {
