layout/tables/nsTableRowFrame.cpp
@@ -1238,21 +1238,18 @@ nsTableRowFrame::CollapseRowIfNecessary(nscoord aRowOffset,
           PRBool collapseGroup = (NS_STYLE_VISIBILITY_COLLAPSE ==
                                   groupVis->mVisible);
           PRBool isCollapsed = collapseCol || collapseGroup;
-          if (isCollapsed) {
-            tableFrame->SetNeedToCollapse(PR_TRUE);
-          }
-          else {
+          if (!isCollapsed) {
             cRect.width += tableFrame->GetColumnWidth(colX);
             isVisible = PR_TRUE;
-          }
-          if (!isCollapsed &&  (actualColSpan > 1)) {
-            nsTableColFrame* nextColFrame =
-              tableFrame->GetColFrame(colX + colIncrement);
-            const nsStyleVisibility* nextColVis =
+            if ((actualColSpan > 1)) {
+              nsTableColFrame* nextColFrame =
+                tableFrame->GetColFrame(colX + colIncrement);
+              const nsStyleVisibility* nextColVis =
               nextColFrame->GetStyleVisibility();
-            if ( (NS_STYLE_VISIBILITY_COLLAPSE != nextColVis->mVisible) &&
-                tableFrame->ColumnHasCellSpacingBefore(colX + colIncrement)) {
-              cRect.width += cellSpacingX;
+              if ( (NS_STYLE_VISIBILITY_COLLAPSE != nextColVis->mVisible) &&
+                  tableFrame->ColumnHasCellSpacingBefore(colX + colIncrement)) {
+                cRect.width += cellSpacingX;
+              }
             }
           }
         }
